package boutique.model;

public class Administrateur {
	public void créationArticle() {};
	public void modificationArticle(){}; 
	public void suppressionArticle(){};
	public void affichageArticle(){};
	public void créationCatégorie(){};
	public void modificationCatégorie(){};
	public void suppressionCatégorie(){};
}
