CREATE DATABASE IF NOT EXISTS HightTech;

use HightTech;

CREATE TABLE Photo (
id INT(6) UNSIGNED AUTO_INCREMENT PRIMARY KEY,
size INT NOT NULL,
url VARCHAR(30) NOT NULL
);

CREATE TABLE Categorie (
id INT(6) UNSIGNED AUTO_INCREMENT PRIMARY KEY,
nom VARCHAR(30) NOT NULL
);

CREATE TABLE Article (
id INT(6) UNSIGNED AUTO_INCREMENT PRIMARY KEY,
libelle VARCHAR(30) NOT NULL,
marque VARCHAR(30) NOT NULL,
prix FLOAT NOT NULL,
idPhoto INT UNSIGNED NOT NULL, 
idCategorie INT UNSIGNED NOT NULL,
FOREIGN KEY (idPhoto) REFERENCES Photo(id),
FOREIGN KEY (idCategorie) REFERENCES Categorie(id)
);

CREATE TABLE Role (
id INT(6) UNSIGNED AUTO_INCREMENT PRIMARY KEY,
nom VARCHAR(30) NOT NULL
);

CREATE TABLE Utilisateur (
id INT(6) UNSIGNED AUTO_INCREMENT PRIMARY KEY,
nom VARCHAR(30) NOT NULL,
prenom VARCHAR(30) NOT NULL,
email VARCHAR(48) NOT NULL,
idRole INT UNSIGNED NOT NULL,
FOREIGN KEY (idRole) REFERENCES Role(id)
);

CREATE TABLE Boutique (
id INT(6) UNSIGNED AUTO_INCREMENT PRIMARY KEY,
description VARCHAR(128) NOT NULL,
adresse VARCHAR(128) NOT NULL,
contact VARCHAR(58) NOT NULL
);

CREATE TABLE Panier (
id INT(6) UNSIGNED AUTO_INCREMENT PRIMARY KEY,
confirme BOOLEAN NOT NULL
);

CREATE TABLE PanierArticle (
idPanier INT(6) UNSIGNED,
idArticle INT(6) UNSIGNED,
PRIMARY KEY (`idPanier`, `idArticle`),
FOREIGN KEY (idPanier) REFERENCES Panier(id),
FOREIGN KEY (idArticle) REFERENCES Article(id)
);